--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   get_it: ^7.6.0
   intl: ^0.19.0
   package_info_plus: ^8.0.0
+  firebase_core: ^2.24.2
 
 dev_dependencies:
   flutter_test:
@@ -39,6 +40,7 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  generate: true
 
   fonts:
     - family: JamIcons
