--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,13 +13,44 @@ dependencies:
   flutter_localizations:
     sdk: flutter
 
+  j1_ui:
+    git:
+      url: https://github.com/J1-Apps/j1_ui.git
+      ref: v1.0.0
+
+  j1_environment:
+    git:
+      url: https://github.com/J1-Apps/j1_environment.git
+      ref: v1.0.0
+
+  j1_theme:
+    git:
+      url: https://github.com/J1-Apps/j1_theme.git
+      ref: v1.0.0
+
+  j1_logger:
+    git:
+      url: https://github.com/J1-Apps/j1_logger.git
+      ref: v1.1.1
+
+  j1_crash_handler:
+    git:
+      url: https://github.com/J1-Apps/j1_crash_handler.git
+      ref: v1.0.1
+
+  j1_router:
+    git:
+      url: https://github.com/J1-Apps/j1_router.git
+      ref: v1.0.2
+
   equatable: ^2.0.5
-  firebase_analytics: ^10.8.0
-  firebase_crashlytics: ^3.4.9
-  firebase_core: ^2.24.2
+  firebase_analytics: ^11.2.1
+  firebase_crashlytics: ^4.0.4
+  firebase_core: ^3.3.0
   get_it: ^7.6.0
   intl: ^0.19.0
   package_info_plus: ^8.0.0
+  flutter_bloc: ^8.1.6
 
 dev_dependencies:
   flutter_test:
@@ -28,12 +59,7 @@ dev_dependencies:
   j1_lints:
     git:
       url: https://github.com/J1-Apps/j1_lints.git
-      ref: v1.0.0
-
-  j1_ui:
-    git:
-      url: https://github.com/J1-Apps/j1_ui.git
-      ref: v1.0.0
+      ref: v1.0.1
 
   flutter_launcher_icons: ^0.13.1
   mocktail: ^1.0.4
@@ -46,3 +72,13 @@ flutter:
     - family: JamIcons
       fonts:
         - asset: packages/j1_ui/fonts/JamIcons.ttf
+
+    - family: Abril Fatface
+      fonts:
+        - asset: fonts/header/AbrilFatface.ttf
+
+    - family: Poppins
+      fonts:
+        - asset: fonts/body/Poppins-Regular.ttf
+        - asset: fonts/body/Poppins-Italic.ttf
+          style: italic
