--- a/.github/workflows/test_and_build.yaml
+++ b/.github/workflows/test_and_build.yaml
@@ -50,3 +50,5 @@ jobs:
         with:
           name: release-build
           path: build/app/outputs/flutter-apk/app-release.apk
+          compression-level: 0
+          retention-days: 14
