--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   intl: ^0.19.0
   package_info_plus: ^8.0.0
   flutter_bloc: ^8.1.6
+  firebase_core_platform_interface: ^5.2.0
 
 dev_dependencies:
   flutter_test:
