#9: update repository implementations

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   package_info_plus: ^8.0.0
   flutter_bloc: ^8.1.6
   firebase_core_platform_interface: ^5.2.0
+  rxdart: ^0.28.0
 
 dev_dependencies:
   flutter_test:
@@ -64,6 +65,8 @@ dev_dependencies:
 
   flutter_launcher_icons: ^0.13.1
   mocktail: ^1.0.4
+  drift_dev: ^2.19.1
+  build_runner: ^2.4.12
 
 flutter:
   uses-material-design: true
