#9: add favorites and language handling

--- a/.gitignore
+++ b/.gitignore
@@ -44,5 +44,10 @@ app.*.map.json
 
 /coverage/
 
+/default.realm.management/
+default.realm
+default.realm.lock
+default.realm.note
+
 .flutter-plugins
 .flutter-plugins-dependencies
