--- a/.github/workflows/test_and_build.yaml
+++ b/.github/workflows/test_and_build.yaml
@@ -31,6 +31,9 @@ jobs:
       - name: update dependencies
         run: flutter pub get
 
+      - name: install realm
+        run: dart run realm install
+
       - name: analyze
         run: flutter analyze
 
@@ -50,3 +53,5 @@ jobs:
         with:
           name: release-build
           path: build/app/outputs/flutter-apk/app-release.apk
+          compression-level: 0
+          retention-days: 14
