--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   firebase_core_platform_interface: ^5.2.0
   rxdart: ^0.28.0
   realm: ^3.4.1
+  http: ^1.2.2
 
 dev_dependencies:
   flutter_test:
