--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,7 +43,6 @@ dependencies:
       url: https://github.com/J1-Apps/j1_router.git
       ref: v1.0.2
 
-  equatable: ^2.0.5
   firebase_analytics: ^11.2.1
   firebase_crashlytics: ^4.0.4
   firebase_core: ^3.3.0
@@ -53,8 +52,9 @@ dependencies:
   flutter_bloc: ^8.1.6
   firebase_core_platform_interface: ^5.2.0
   rxdart: ^0.28.0
-  realm: ^20.0.0
   http: ^1.2.2
+  dart_mappable: ^4.2.2
+  shared_preferences: ^2.3.2
 
 dev_dependencies:
   flutter_test:
@@ -68,7 +68,7 @@ dev_dependencies:
   flutter_launcher_icons: ^0.13.1
   mocktail: ^1.0.4
   build_runner: ^2.4.12
-  realm_common: ^20.0.0
+  dart_mappable_builder: ^4.2.3
 
 flutter:
   uses-material-design: true
