--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   http: ^1.2.2
   dart_mappable: ^4.2.2
   shared_preferences: ^2.3.2
+  bloc_concurrency: ^0.2.5
 
 dev_dependencies:
   flutter_test:
