--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ dependencies:
   j1_ui:
     git:
       url: https://github.com/J1-Apps/j1_ui.git
-      ref: v1.0.1
+      ref: v1.0.3
 
   j1_environment:
     git:
@@ -56,6 +56,7 @@ dependencies:
   dart_mappable: ^4.2.2
   shared_preferences: ^2.3.2
   bloc_concurrency: ^0.2.5
+  vector_graphics: ^1.1.11+1
 
 dev_dependencies:
   flutter_test:
@@ -70,10 +71,16 @@ dev_dependencies:
   mocktail: ^1.0.4
   build_runner: ^2.4.12
   dart_mappable_builder: ^4.2.3
+  vector_graphics_compiler: ^1.1.11+1
 
 flutter:
   uses-material-design: true
   generate: true
+
+  assets:
+    - path: assets/flags/
+      transformers:
+        - package: vector_graphics_compiler
 
   fonts:
     - family: JamIcons
