--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   bloc_concurrency: ^0.2.5
   vector_graphics: ^1.1.11+1
   fl_chart: ^0.69.0
+  collection: ^1.18.0
 
 dev_dependencies:
   flutter_test:
