--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -3,17 +3,17 @@
 <plist version="1.0">
 <dict>
 	<key>API_KEY</key>
-	<string>AIzaSyC38xC_KLLM9-RGfmLdmA8MWd686mI5JkY</string>
+	<string>AIzaSyCXpa_CyFPn0QZVO-W-SlognTAvjKgiPpg</string>
 	<key>GCM_SENDER_ID</key>
-	<string>1079949704264</string>
+	<string>55663510265</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
 	<string>com.j1.currencyConverter</string>
 	<key>PROJECT_ID</key>
-	<string>currency-converter-test-f28cf</string>
+	<string>j1-currency-converter</string>
 	<key>STORAGE_BUCKET</key>
-	<string>currency-converter-test-f28cf.appspot.com</string>
+	<string>j1-currency-converter.firebasestorage.app</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -25,6 +25,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:1079949704264:ios:8be349108aa83924d62c7d</string>
+	<string>1:55663510265:ios:a014b746740b780e835828</string>
 </dict>
 </plist>
