--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,8 +57,9 @@ dependencies:
   shared_preferences: ^2.3.2
   bloc_concurrency: ^0.2.5
   vector_graphics: ^1.1.11+1
-  fl_chart: ^0.69.0
+  fl_chart: ^0.70.0
   collection: ^1.18.0
+  cloud_firestore: ^5.5.1
 
 dev_dependencies:
   flutter_test:
